# SlipNet

./: .gitmodules  README.md
.agents/skills/testing-flutter-ffi-dashboard/: SKILL.md
app/: build.gradle.kts
app/src/main/java/app/slipnet/di/: DatabaseModule.kt
app/src/main/java/app/slipnet/service/: SlipNetVpnService.kt  VpnConnectionManager.kt
app/src/main/java/app/slipnet/tunnel/: DnsPoolScanner.kt  DnsResolverProber.kt  DnsttBridge.kt  LocalProxyAuth.kt  PayloadSocketFactory.kt  PortUtils.kt  ProxyHttpConnect.kt  ProxyWebSocket.kt  TlsSocketFactory.kt  (+3 more)
cli/: crypto_test.go  parse_uri_test.go  scanner_test.go  sni_fragment_test.go  ssh_native.go  ssh_transport_test.go  vless_extra_test.go
docs/: flutter-rearchitecture.md
flutter/: README.md  pubspec.yaml
flutter/android/app/: build.gradle
flutter/android/app/src/main/: AndroidManifest.xml
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/lib/src/bridge/: connection_controller.dart  models.dart  slipnet_bindings.dart  slipnet_bridge.dart
flutter/lib/src/features/dashboard/: dashboard_screen.dart
flutter/lib/src/features/dashboard/widgets/: connect_button.dart  glass_card.dart  stat_tile.dart
flutter/lib/src/theme/: app_theme.dart
flutter/native/slipnet_bridge/: CMakeLists.txt  slipnet_bridge.c  slipnet_bridge.h
flutter/test/bridge/: connection_controller_test.dart  models_test.dart
flutter/test/features/: dashboard_screen_test.dart
flutter/test/support/: fake_bridge.dart
flutter/tool/: ffi_smoke.dart  verify_ffi.sh
(+14 files in other folders)
